--- a/second.css
+++ b/second.css
@@ -4,6 +4,10 @@
     margin: 0px;
 }
 
+#status, #bedroom_status, #desk_status, #bottles_status, #fruit_basket_status, #tv_and_ac_status{
+    font-size: 15px;
+}
+
 .button{
     float: right;
     background-color: black;
@@ -19,4 +23,13 @@ canvas{
     border-radius: 75px;
     border-color: 0px solid black;
     box-shadow: 1px 38px 38px red;
+}
+
+body{
+    text-align: center;
+    font-size: 15px;
+}
+
+h3{
+    margin: 1px;
 }
